--- a/vercel.json
+++ b/vercel.json
@@ -40,8 +40,13 @@
     {
       "src": "/orders/(.*)",
       "dest": "index.js"
-    }, {
+    },
+    {
       "src": "/auth",
+      "dest": "index.js"
+    },
+    {
+      "src": "/auth/signup",
       "dest": "index.js"
     },
     {
