--- a/vercel.json
+++ b/vercel.json
@@ -9,74 +9,7 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
-    {
-      "src": "/products",
-      "dest": "index.js"
-    },
-    {
-      "src": "/products/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/filters",
-      "dest": "index.js"
-    },
-    {
-      "src": "/filters/(.*)",
-      "dest": "index.js"
-    }, 
-    {
-      "src": "/cart",
-      "dest": "index.js"
-    },
-    {
-      "src": "/cart/(.*)",
-      "dest": "index.js"
-    }, {
-      "src": "/orders",
-      "dest": "index.js"
-    },
-    {
-      "src": "/orders/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/auth",
-      "dest": "index.js"
-    },
-    {
-      "src": "/auth/signup",
-      "dest": "index.js"
-    },
-    {
-      "src": "/auth/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/user",
-      "dest": "index.js"
-    },
-    {
-      "src": "/user/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/create-payment-intent",
-      "dest": "index.js"
-    },
-    {
-      "src": "/create-payment-intent/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/",
-      "dest": "build/index.html"
-    },
-    {
-      "src": "/(.+)",
-      "dest": "build/$1"
-    }
-  ]
+
+  "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
 }
 
