--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,12 @@
     }
   ],
 
-  "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "index.js" },
+    {
+      "source": "/orderSuccess/:orderId",
+      "destination": "index.js"
+    }
+  ]
 }
 
