try to make site seo frindly

--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
       "has": [
         {
           "type": "host",
-          "value": "https://ecommerce-site-qftm76081-manpreet-singhs-projects-8a57e9e6.vercel.app"
+          "value": "manpreet.c1.is"
         }
       ],
       "headers": [
